# sr-common

sr_description/: CMakeLists.txt  package.xml
sr_description/hand/xacro/finger/distal/: distal.urdf.xacro
sr_description/hand/xacro/finger/knuckle/: knuckle.urdf.xacro
sr_description/hand/xacro/finger/lfmetacarpal/: lfmetacarpal.urdf.xacro
sr_description/hand/xacro/finger/middle/: middle.urdf.xacro  middle_and_distal_bt_2p.urdf.xacro
sr_description/hand/xacro/finger/proximal/: proximal.urdf.xacro
sr_description/hand/xacro/forearm/: forearm_c.urdf.xacro  forearm_e.urdf.xacro  forearm_g.urdf.xacro
sr_description/hand/xacro/palm/: palm_e.urdf.xacro  palm_g.urdf.xacro
sr_description/hand/xacro/thumb/: thdistal.urdf.xacro  thmiddle.urdf.xacro  thproximal.urdf.xacro
sr_description/hand/xacro/wrist/: wrist.urdf.xacro
sr_description/launch/: demo.launch.py
sr_description/mujoco_models/urdfs/: shadowhand_motor.urdf  shadowhand_motor_left.urdf  shadowhand_motor_plus.urdf  shadowhand_motor_plus_left.urdf  ur10.urdf  ur10_hand.urdf
sr_robot_msgs/: CMakeLists.txt  package.xml
sr_robot_msgs/msg/: ActuatorStatistics.msg  AuxSpiData.msg  BiotacAll.msg  ControllerStatistics.msg  EthercatDebug.msg  JointControllerState.msg  JointMusclePositionControllerState.msg  JointMuscleValveControllerState.msg  JointStatistics.msg  MSTPalm.msg  MSTReading.msg  MechanismStatistics.msg  MidProxDataAll.msg  ShadowContactStateStamped.msg  ShadowPST.msg  TactileArray.msg  UBI0All.msg  cartesian_position.msg
